# b

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
crates/beacon-cli/: Cargo.toml
crates/beacon-cli/src/: args.rs  cli.rs  main.rs  mcp.rs  renderer.rs
crates/beacon-cli/src/mcp/: errors.rs  handlers.rs  mod.rs  prompts.rs
crates/beacon-cli/templates/: execute.md  plan.md
crates/beacon-cli/tests/: cli_tests.rs  integration_test.rs
crates/beacon-core/: Cargo.toml
crates/beacon-core/assets/: schema.sql
crates/beacon-core/src/: db.rs  display.rs  error.rs  handlers.rs  lib.rs  models.rs  operations.rs  params.rs  planner.rs
crates/beacon-core/src/db/: migrations.rs  mod.rs  plan_queries.rs  step_queries.rs  utils.rs
crates/beacon-core/src/display/: collections.rs  datetime.rs  mod.rs  models.rs  results.rs  status.rs
crates/beacon-core/src/models/: filters.rs  mod.rs  plan.rs  requests.rs  status.rs  step.rs  summary.rs  tests.rs
crates/beacon-core/src/planner/: builder.rs  mod.rs  plan_handlers.rs  plan_ops.rs  step_handlers.rs  step_ops.rs  tests.rs
crates/beacon-core/tests/: db_tests.rs  planner_integration.rs  planner_tests.rs
crates/beacon-core/tests/common/: mod.rs
