[workspace]
resolver = "2"
members = [
    "crates/beacon-core",
    "crates/beacon-cli",
]

[workspace.package]
version = "0.1.0"
authors = ["Beacon Contributors"]
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"
repository = "https://github.com/beacon-rs/beacon"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
anyhow = "1.0.99"
tokio = { version = "1.47.1", features = ["full"] }
clap = { version = "4.5.45", features = ["derive", "env"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
jiff = { version = "0.2.15", features = ["serde"] }
xdg = "3.0.0"

# Logging
env_logger = "0.11.8"
log = "0.4.27"

# Testing dependencies
tempfile = "3.21.0"
assert_cmd = "2.0.17"
predicates = "3.1.3"

# MCP SDK
rmcp = { version = "0.6.0", features = ["transport-io"] }
schemars = "1.0.4"

# Terminal rendering
termimad = "0.33.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 2
