[workspace]
resolver = "2"
members = [
    "crates/beacon-core",
    "crates/beacon-cli",
]

[workspace.package]
version = "0.1.0"
authors = ["Beacon Contributors"]
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"
repository = "https://github.com/beacon-rs/beacon"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
anyhow = "1.0.99"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "sync", "signal"] }
clap = { version = "4.5.45", features = ["derive"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
jiff = { version = "0.2.15", features = ["serde"] }
xdg = "3.0.0"

# Logging
env_logger = "0.11.8"
log = "0.4.27"

# Testing dependencies
tempfile = "3.21.0"
assert_cmd = "2.0.17"
predicates = "3.1.3"

# MCP SDK
rmcp = { version = "0.6.0", features = ["transport-io"] }
schemars = "1.0.4"

# Terminal rendering
termimad = "0.33.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 2

[workspace.lints.rust]
unsafe_code = "forbid"
unused_imports = "warn"
unused_variables = "warn"
dead_code = "warn"
unused_must_use = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
# Complexity lints
cognitive_complexity = "warn"
type_complexity = "warn"
too_many_arguments = "warn"
too_many_lines = "warn"

# Correctness lints
redundant_closure = "warn"
redundant_clone = "warn"
needless_pass_by_value = "warn"
unnecessary_wraps = "warn"

# Performance lints
inefficient_to_string = "warn"
large_types_passed_by_value = "warn"

# Style lints
explicit_iter_loop = "warn"
manual_let_else = "warn"
inconsistent_struct_constructor = "warn"

# Pedantic lints (more strict)
missing_panics_doc = "warn"
