[package]
name = "beacon-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
jiff = { workspace = true }
xdg = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
