[package]
name = "beacon-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rusqlite = { workspace = true }
jiff = { workspace = true }
xdg = { workspace = true }
tokio = { workspace = true }
schemars = { workspace = true, optional = true }

[features]
default = []
schema = ["schemars"]

[dev-dependencies]
tempfile = { workspace = true }
